# genderfluid

./: Cargo.toml  icon.svg.import  project.godot  water.gdshader
.cargo/: config.toml
assets/: glowingflower2.glb
assets/shaders/: custom_vertex_attribute.wgsl  fluid_heightmap_berechnungsschattierer.wgsl  game_of_life.wgsl  height_map_extract_compute.wgsl  water_vertex_and_fragment.wgsl
scenes/: first_scene.gd  first_scene.tscn  new_fast_noise_lite.tres
shaders/: vertex.glsl  vertex.glsl.import  water_compute.glsl  water_compute.glsl.import
src/: extract_heights.rs  main.rs  orbit_camera.rs  water_pbr_material.rs
