[package]
name = "genderfluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
smooth-bevy-cameras = "0.9.0"
bevy_shader_utils = "0.5.2"
bytemuck = "1.14.0"
rand_core = "0.6"
rand = "0.8.5"
wgpu = "0.16.1"
wgpu-types = "0.16.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
